samples/_failures_safe/1761521542_21dffc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5c24840d.c: In function ‘main’:
./samples/SAFE/__tmp_5c24840d.c:152:17: error: expected expression at end of input
  152 |                 if (!read_matrix(&a))
      |                 ^~
./samples/SAFE/__tmp_5c24840d.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5c24840d.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5c24840d.c:152:17: error: expected declaration or statement at end of input
